control-plane/custom-gateway-api/conformance/tests/httproute-invalid-cross-namespace-parent-ref.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: invalid-cross-namespace-parent-ref
  namespace: gateway-conformance-web-backend
spec:
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
  rules:
  - backendRefs:
    - name: web-backend
      port: 8080
